--- a/solarsim-map.html
+++ b/solarsim-map.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Testing development skills</title>
+
+	<title>SolarSIM sensor locations across Canada</title>
 
 	<meta charset="utf-8">
 
