--- a/solarsim-map.html
+++ b/solarsim-map.html
@@ -6,7 +6,13 @@
 
 	<meta charset="utf-8">
 
-	<link rel="stylesheet" type="text/css" href="styles/solarsim-map.css">
+	<!-- Bootstrap import -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+  	<link rel="stylesheet" type="text/css" href="styles/solarsim-map.css">
 
 </head>
 
@@ -18,18 +24,17 @@
 			</div>
 			<div class="nav">
 				<ul>
-					<li><a href="http://spectrafy.com/products/solarsim-d2">Products</li>
-					<li><a href="http://spectrafy.com/about-us">About</li>
+					<li><a href="http://spectrafy.com/careers">Careers</a></li>
 					<li><a href="http://spectrafy.com/category/news">News</a></li>
-					<li><a href="http://spectrafy.com/careers">News</a></li>
+					<li><a href="http://spectrafy.com/about-us">About</li>
+					<li><a href="http://spectrafy.com/products/solarsim-d2">Products</li>				
 				</ul>
 			</div>
 		</div>
 	</div>
 
-	<div class="content">
+	<div class="googlemap">
 		<div class="container">
-			<h2>Spectral map of Canada</h2>
 			<div id="map"></div>
 		    <script>
 		      function initMap() {
@@ -48,37 +53,43 @@
 
 		        var marker = new google.maps.Marker({
 		          animation: google.maps.Animation.DROP,
-		          label:"Ottawa, Ontario",
+		          label:"Ottawa, ON",
 		          position: ottawa,		    
 		          map: map
 		        });
 		        var marker = new google.maps.Marker({
 		        	animation: google.maps.Animation.DROP,
+		        	label:"Charlottetown, PEI",
 		          	position: pei,
 		          	map: map
 		        });
 		        var marker = new google.maps.Marker({
 		          animation: google.maps.Animation.DROP,
+		          label:"Toronto, ON",
 		          position: toronto,
 		          map: map
 		        });
 		        var marker = new google.maps.Marker({
 		          animation: google.maps.Animation.DROP,
+		          label:"Cambridge Bay, NU",
 		          position: cabridgebay,
 		          map: map
 		        });
 		        var marker = new google.maps.Marker({
 		          animation: google.maps.Animation.DROP,
+		          label:"Gatineau, QC",
 		          position: quebec,
 		          map: map
 		        });
 		        var marker = new google.maps.Marker({
 		          animation: google.maps.Animation.DROP,
+		          label:"Saturna Island, BC",
 		          position: bc,
 		          map: map
 		        });
 		        var marker = new google.maps.Marker({
 		          animation: google.maps.Animation.DROP,
+		          label:"Calgary, AB",
 		          position: calgary,
 		          map: map
 		        });
@@ -89,6 +100,60 @@
 		    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3EsKYUYTRfsEBGOi5CiAjHFhCmp1oN04&callback=initMap">
 		    </script>
 		</div>
+	</div>
+
+	<div class="content">
+		<div class="container">
+			<h2>Spectrafy's spectral map of Canada</h2>
+			<h3>Check out the data!</h3>
+
+			<div class="row">
+        		<div class="col-md-4">
+        			<div class="location">
+        				<h4>Ottawa</h4>
+        			</div>
+        		</div>
+        		<div class="col-md-4">
+        			<div class="location">
+        				<h4>Gatineau</h4>
+        			</div>
+        		</div>
+        		<div class="col-md-4">
+        			<div class="location">
+        				<h4>Charlottetown</h4>
+        			</div>
+        		</div>
+        	</div>
+
+        	<div class="row">
+        		<div class="col-md-4">
+        			<div class="location">
+        				<h4>Toronto</h4>
+        			</div>
+        		</div>
+        		<div class="col-md-4">
+        			<div class="location">
+        				<h4>Cambridge Bay</h4>
+        			</div>
+        		</div>
+        		<div class="col-md-4">
+        			<div class="location">
+        				<h4>Saturna Island</h4>
+        			</div>
+        		</div>
+        	</div>
+
+        	<div class="row">
+        		<div class="col-md-4">
+        			<div class="location">
+        				<h4>Calgary</h4>
+        			</div>
+        		</div>
+        		
+        	</div>
+			
+		</div>
+		
 	</div>
 </body>
 </html>
