Can only select data from locations that have been set up. The scripts are in their own file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Main link page</title>
 </head>
 <body>
-	<a href="/solarsim-map"> View dashboard</a>
+	<a href="/ssimlocator"> View dashboard</a>
 
 </body>
 </html>
