--- a/ssimlocator.html
+++ b/ssimlocator.html
@@ -25,7 +25,7 @@
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
  <!-- Add javascript to the website -->
- <script type="text/javascript" src="scripts/ssimlocator.js?v=3"></script>
+ <script type="text/javascript" src="scripts/ssimlocator.js?v=4"></script>
  <!-- Import Bootstrap style -->
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -202,8 +202,12 @@
 
    	<div class="col-md-4"> 
    	<div class="location">
-   	 <h4>Select Data Range</h4>
-   	 <p><br></p>
+   	 <h4>Date</h4>
+   	 <p>Select live dashboad:</p>
+   	 <form> <!-- Display available data -->
+	   <div class="checkbox checkbox-text"><label><input type="checkbox" value="live" name="live_daq">Live data (Updated every 60s)</label></div>
+   	 </form>
+   	 <p>Or, select a date range:</p>
    	 <input class="daterange" type="text" name="daterange" style="width:100%; height:50px; font-family: 'Roboto', sans-serif; font-size: 18px;" value="11/12/2016 1:30 PM - 11/12/2016T2:00:PM" />
 	 <script type="text/javascript">
 	 $(function() {
